Thu Feb 18 18:31:55 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Check a string for definition before comparing.  Some versions of
          perl report a warning coming from the update_template_variable
          method.

Tue Feb 16 04:36:04 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * config/wireshark.mpb:

          Fixed whitespace problems introduced in previous commit.

Tue Feb 16 00:56:18 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * templates/make.mpd:

          Fixed a bug in the template where the 'dld' template variable was
          not honored.

        * templates/makedll.mpt:

          Added a 'macosx' platform similar to the 'macos' platform except
          that the linker is g++ and there are no additional libraries
          linked in.

Mon Feb 15 19:23:45 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * config/wireshark.mpb:

          Final round of updates for Wireshark support on Windows.

Mon Feb 15 04:59:26 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * config/wireshark.mpb:

          Updated supported environment variables; Windows installations
          do not honor the traditional lib subdirectory.

Thu Feb 11 22:25:16 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * config/ndds_ts_defaults.mpb:

          Minor changes to address the limitation described in
          Bug 3811. Changes need to be reverted once Bug 3811 is
          fixed. Thanks to Trent Nadeau <Trent dot Nadeau at ngc dot com>
          for contributing this change and testing it.

Thu Feb 11 21:07:11 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * config/glib.mpb:
        * config/wireshark.mpb:

          Added initial support for glib.

Thu Feb 11 20:19:38 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * config/global.features:
        * config/wireshark.mpb:

          Added initial support for wireshark.
