@@ -2969,6 +2969,12 @@
               <em class="Code">MOC_Files</em> can be used to specify the
               input files for this new file type.</li>
 
+              <li class="Body">Define_Custom definitions may use single
+              inheritance.  This is useful for creating aliased names:
+              <p class="Code">Define_Custom(QtMOC) : MOC {</p>
+              <p class="Code">}</p>
+              </li>
+
               <li class="Body">The following table contains the keywords that
               can be used within the scope of <em class=
               "Code">Define_Custom</em>.</li>
