@@ -742,7 +742,7 @@ sub parse_line {
 
   ## parse_known() passes back an array of values
   ## that make up the contents of the line parsed.
-  ## The array can have 0 to 3 items.  The first,
+  ## The array can have 0 to 4 items.  The first,
   ## if defined, is always an identifier of some
   ## sort.
 
@@ -925,7 +925,12 @@ sub parse_line {
     elsif ($values[0] eq 'component') {
       my $comp = $values[1];
       my $name = $values[2];
+      my @inhr = defined $values[3] ? @{$values[3]} : ();
       my $vc   = $self->{'valid_components'};
+
+      if ($comp ne 'define_custom' && @inhr != 0) {
+        return 0, "$comp does not allow an inheritance list";
+      }
 
       if (defined $$vc{$comp}) {
         ($status, $errorString) = $self->parse_components($ih, $comp, $name);
@@ -957,7 +962,8 @@ sub parse_line {
           }
         }
         elsif ($comp eq 'define_custom') {
-          ($status, $errorString) = $self->parse_define_custom($ih, $name);
+          ($status, $errorString) = $self->parse_define_custom($ih, $name, 0,
+                                                               \@inhr);
         }
         elsif ($comp eq 'modify_custom') {
           ($status, $errorString) = $self->parse_define_custom($ih, $name, 1);
@@ -1267,7 +1273,7 @@ sub process_component_line {
     ## If there is a command helper, we need to add the output files
     ## here.  It is possible that helper determined output files are
     ## the only files added by this component type.
-    my $cmdHelper = CommandHelper::get($tag);
+    my $cmdHelper = $self->find_command_helper($tag);
     if (defined $cmdHelper) {
       my $key = $line;
       $key =~ s/\\/\//g if ($self->{'convert_slashes'});
@@ -1638,7 +1644,7 @@ sub process_array_assignment {
 
 
 sub parse_define_custom {
-  my($self, $fh, $tag, $modify) = @_;
+  my($self, $fh, $tag, $modify, $parentsRef) = @_;
 
   ## Make the tag something _files
   $tag = lc($tag) . '_files';
@@ -1653,6 +1659,20 @@ sub parse_define_custom {
   }
   elsif ($modify) {
     return 0, "$tag has not yet been defined and can not be modified";
+  }
+
+  if (defined $parentsRef && @$parentsRef > 0) {
+    if (@$parentsRef > 1) {
+      return 0, "$tag: multiple inheritance is not allowed";
+    }
+    my $parent = lc($$parentsRef[0]) . '_files';
+    if (!defined $self->{'valid_components'}->{$parent}) {
+      return 0, "$parent is not a valid custom file type";
+    }
+    for my $k ('matching_assignments', 'generated_exts', 'valid_components') {
+      $self->{$k}->{$tag} = $self->clone($self->{$k}->{$parent});
+    }
+    $self->{'define_custom_parent'}->{$tag} = $parent;
   }
 
   my $status      = 0;
@@ -2341,7 +2361,7 @@ sub generated_filenames {
     ## this type and see what sort of output it knows about.
     my $inputexts = $self->{'generated_exts'}->{$type}->{$generic_key};
     if (!defined $inputexts) {
-      my $cmdHelper = CommandHelper::get($type);
+      my $cmdHelper = $self->find_command_helper($type);
       $inputexts = $cmdHelper->get_outputexts() if (defined $cmdHelper);
     }
 
@@ -3106,7 +3126,7 @@ sub generate_default_components {
           ## locate a command helper for the custom command and see if it
           ## knows about any additional output files based on the file
           ## name.
-          my $cmdHelper = CommandHelper::get($tag);
+          my $cmdHelper = $self->find_command_helper($tag);
           if (defined $cmdHelper) {
             my $names = $self->{$tag};
             foreach my $name (keys %$names) {
@@ -3644,7 +3664,7 @@ sub generate_defaults {
   ## sort of thing manually.
   my $dep = 'dependent';
   foreach my $gentype (@gvc) {
-    my $cmdHelper = CommandHelper::get($gentype);
+    my $cmdHelper = $self->find_command_helper($gentype);
     if (defined $cmdHelper) {
       ## There has to be at least two files files in order for
       ## something to be tied together.
@@ -4768,6 +4788,7 @@ sub reset_generating_types {
   }
 
   $self->{'custom_types'} = {};
+  $self->{'define_custom_parent'} = {};
 
   ## Allow subclasses to override the default extensions
   $self->set_component_extensions();
@@ -5225,6 +5246,18 @@ sub get_resource_tag {
   ## For this, we will just return the tag for C++ since it probably
   ## doesn't really matter anyway.
   return defined $language{$lang}->[5] ? $language{$lang}->[5] : $cppresource;
+}
+
+sub find_command_helper {
+  my($self, $tag) = @_;
+  if (!defined $tag) {
+    return undef;
+  }
+  my $ch = CommandHelper::get($tag);
+  if (defined $ch) {
+    return $ch;
+  }
+  return $self->find_command_helper($self->{'define_custom_parent'}->{$tag});
 }
 
 # ************************************************************
