@@ -1,3 +1,12 @@
+Fri Feb 19 15:25:47 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * docs/README:
+        * docs/html/MakeProjectCreator.html:
+        * modules/Creator.pm:
+        * modules/ProjectCreator.pm:
+
+          Added the ability for Define_Custom types to singly-inherit.
+
 Thu Feb 18 18:31:55 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/ProjectCreator.pm:
